# PolyInterpolation

./: .gitignore  CMakeLists.txt  Makefile  Myio.h  PolynomialInterpolation.cpp  PolynomialInterpolation.cu  PolynomialInterpolation.cuh  PolynomialInterpolation.h  TetPoisson.ufl  main.cpp  main_copy.cpp  test.py
